feat: update category api
