# src/models/categoty.model.js
@@ -2,13 +2,17 @@ const { Sequelize, DataTypes } = require("sequelize")
 const { sequelize } = require('../config/database')
 
 const Category = sequelize.define('Category', {
-    category_id: {
+    id: {
         type: DataTypes.INTEGER,
         primaryKey: true,
         autoIncrement: true
     },
     name: {
         type: DataTypes.STRING,
+        allowNull: false
+    },
+    parent_id: {
+        type: DataTypes.INTEGER,
         allowNull: false
     }
 }, {
